added logout and transaction history